# AmazingOfflineShop

./: .gitignore  CMakeLists.txt  README.md  main.cc  project.pro
amazing/file_reader/: CsvReader.cc  CsvReader.h  IFileReader.cc  IFileReader.h  TextReader.cc
amazing/objects/: Discounts.cc  Discounts.h  IObjects.h  ProcessedOrders.cc
app/: CMakeLists.txt  app.pro  main.cc
input/: all_tables.csv  discount.csv  items.csv  order_01.csv  order_02.csv  order_03.csv  order_041.csv
lib/: CMakeLists.txt  lib.pro
lib/file_reader/: CsvReader.cc  CsvReader.h  IFileReader.cc  IFileReader.h  TextReader.cc  TextReader.h
lib/objects/: Discounts.cc  Discounts.h  IObjects.h  Items.cc  Items.h  Orders.cc  Orders.h  ProcessedOrders.cc  ProcessedOrders.h
test/: CMakeLists.txt  CsvReaderTest.cc  ItemsTest.cc  ProcessedOrdersTest.cc  test.pro
